fixed skills bug on low width screens due to not showing in view. updated home footer and scroll behaviour to smooth

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 @layer components {
@@ -21,7 +22,7 @@
     @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all focus:border-[#F7AB0A]/40 focus:text-[#F7AB0A]/40 hover:border-[#F7AB0A]/40;
   }
   .skill-size {
-    @apply w-20 h-20 sm:w-24 sm:h-24 md:w-28 md:h-28 xl:w-32 xl:h-32 scale-50;
+    @apply w-16 h-16 sm:w-24 sm:h-24 md:w-28 md:h-28 xl:w-32 xl:h-32 scale-50;
   }
 
   .skillIcon {
